Added community controller
