# api/swagger/swagger.yaml
@@ -44,13 +44,13 @@ paths:
             $ref: "#/definitions/ErrorResponse"            
   /v1/communityScreen:
     # binds a127 app logic to a route
-    x-swagger-router-controller: hello_world
+    x-swagger-router-controller: community
     get:
       description: Return Json Data for Community Screen
       # used as the method name of the controller
-      operationId: getCommunityScreen
+      operationId: communityScreen
       parameters:
-        - name: userId
+        - name: name
           in: query
           description: The id of the current user
           required: true
